[package]
name = "observitor"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/gabbyzhat/observitor"
documentation = "https://docs.rs/observitor"
description = "Observer trait and handling"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Gabriel Engels <git@gabbyzhat.xyz>"
]

[features]

[dependencies]

[dev-dependencies]
